<resources>
    <string name="app_name">HUMG StudyPlanner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="btn_dang_ky">thêm hồ sơ</string>
    <string name="btn_tai_khoan">quản lý hồ sơ</string>
    <string name="btn_xem">xem</string>
    <string name="editmasv">mã sinh viên</string>
    <string name="edithoten">họ và tên</string>
    <string name="editemail">email - không bắt buộc</string>
    <string name="txthoten">họ tên</string>
    <string name="txtmasinhvien">mã sinh viên</string>

    <string name="btn_1_fragment_nguoidung">Thông tin cá nhân</string>
    <string name="btn_2_fragment_nguoidung">Kế hoạch học tập</string>
    <string name="btn_3_fragment_nguoidung">Xem nhanh</string>
    <string name="btn_4_fragment_nguoidung">Sao lưu - phục hồi</string>
    <string name="btn_5_fragment_nguoidung">test</string>
    <string name="btn_6_fragment_nguoidung">test</string>
    <string name="btn_themmonhoc">thêm môn học</string>
    <string name="btn_capnhatmonhoc">cập nhật điểm số</string>
    <string name="btn_luumonhoc">lưu môn học</string>
    <string name="btn_xoahocky">xóa học kỳ</string>

    <string name="btn_1_fragment_niengiam">Chương trình đào tạo</string>
    <string name="btn_2_fragment_niengiam">Bộ môn chủ quản</string>
    <string name="btn_3_fragment_niengiam">Hướng dẫn sử dụng</string>
    <string name="btn_4_fragment_niengiam">Thông tin ứng dụng</string>

    <string name="btn_them_anh">thêm</string>
    <string name="btn_sua_anh">sửa</string>
    <string name="btn_xoa_anh">xóa</string>

    <string name="btn_huy">hủy</string>
    <string name="btn_capnhat">cập nhật</string>
    <string name="btn_capnhatCTDT">cập nhật CTDT</string>

    <string name="main_activity_tab1_name">chức năng</string>
    <string name="main_activity_tab2_name">điểm số</string>
    <string name="main_activity_tab3_name">niên giám</string>

    <string name="mon_hoc_chua_qua_activity_tab0_name">thống kê\nsơ bộ</string>
    <string name="mon_hoc_chua_qua_activity_tab1_name">môn\nđang học</string>
    <string name="mon_hoc_chua_qua_activity_tab2_name">môn học\nchưa qua</string>
    <string name="mon_hoc_chua_qua_activity_tab3_name">môn học\ncải thiện</string>
    <string name="mon_hoc_chua_qua_activity_tab4_name">giáo dục\nthể chất</string>

    <string name="title_activity_main">Màn hình chính</string>
    <string name="title_activity_search_result">Kết quả tìm kiếm</string>
    <string name="title_activity_thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="title_activity_tao_tai_khoan">Hồ sơ mới</string>
    <string name="title_activity_ke_hoach_hoc_tap">Kế hoạch học tập</string>
    <string name="title_activity_chi_tiet_mon_hoc">Chi tiết môn học</string>
    <string name="title_activity_gioi_thieu">Về ứng dụng</string>
    <string name="title_activity_huong_dan_su_dung">Hướng dẫn sử dụng</string>
    <string name="title_activity_bo_mon">Bộ môn</string>
    <string name="title_activity_nganh">Chuyên ngành</string>
    <string name="title_activity_quan_ly_ke_hoach_hoc_tap">Quản lý kế hoạch học tập</string>
    <string name="title_activity_xem_nhanh">Xem nhanh</string>
    <string name="title_activity_bang_diem2">Bảng điểm</string>
    <string name="title_activity_bang_diem">Bảng điểm</string>
    <string name="title_activity_quan_ly_tai_khoan">Danh sách hồ sơ</string>
    <string name="title_activity_backup">Sao lưu - phục hồi</string>

    <string name="title_fragment_xemnhanh">Thống kê sơ bộ</string>

    <string name="subtitleDieuKienTienQuyet">điều kiện tiên quyết</string>
    <string name="subtitleNoiDung">nội dung</string>
    <string name="subtitleTaiLieuThamKhao">tài liệu tham khảo</string>
    <string name="subtitleDieuKienTotNghiep">điều kiện tốt nghiệp</string>
    <string name="subtitleTuChon">học phần tự chọn</string>

    <string name="chonChuyenSau">Cần chọn hướng chuyên sâu trước</string>
    <string name="khong">Chưa có dữ liệu</string>

    <string name="txt">TextView</string>
    <string name="txtMaSinhVien">Mã sinh viên</string>
    <string name="txtHoTen">Họ tên</string>
    <string name="txtKhoa">Khoa</string>
    <string name="txtChuyenNganh">Chuyên ngành</string>
    <string name="txtNganh">Ngành</string>
    <string name="txtBoMon">Bộ môn</string>
    <string name="txtChuyenSau">Chuyên sâu</string>
    <string name="txtNam">Năm thứ</string>
    <string name="txtEmail">Email</string>
    <string name="txtDanhSachMonHoc">Danh sách môn học</string>
    <string name="txtKeHoachHocTap">Kế hoạch học tập</string>
    <string name="txtTimKiem">Tìm kiếm môn học</string>
    <string name="txtNhapDiem">Nhập điểm</string>
    <string name="txtCTDT">Chương trình đào tạo</string>
    <string name="txtCapNhatDiem">Cập nhật</string>
    <string name="txtBangDiem">Bảng điểm</string>
    <string name="txtChonAnh">Lấy ảnh từ</string>
    <string name="txtXoaAnh">Xóa bảng điểm</string>
    <string name="txtTuChonA">Tự chọn A</string>
    <string name="txtTuChonB">Tự chọn B</string>
    <string name="txtTuChonC">Tự chọn C</string>
    <string name="txtMemory">Bộ nhớ trong</string>
    <string name="txtGoogleDrive">Google Drive</string>
    <string name="txtSaoLuu">sao lưu hồ sơ</string>
    <string name="txtSwitchAccount">đổi tài khoản</string>
    <string name="txtAddYear">học hết 1 năm rồi \\o/</string>
    <string name="txtPermissionDenided">Không có quyền truy cập bộ nhớ\nCấp quyền truy cập cho ứng dụng tại Cài đặt -> Ứng dụng</string>
    <string name="txtPermissionWriteSuccess">File backup đã lưu tại </string>
    <string name="txtCapNhatThongTin">Cập nhật thông tin cá nhân</string>
    <string name="txtChuaChonChuyenNganh">Chưa chọn hướng chuyên sâu</string>
    <string name="txtPhucHoi">Phục hồi hồ sơ</string>

    <string name="txtBuilding">Đang hoàn thiện...</string>

    <string name="bang_diem_content">CHƯA CÓ\n DỮ LIỆU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>

</resources>
