<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#616161"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BangDiemActivity">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:fontFamily="sans-serif-light"
        android:text="@string/bang_diem_content"
        android:textColor="#757575"
        android:textSize="50sp" />
    <ImageView
        android:id="@+id/fullscreen_image_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button_1"
                style="@style/btn_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:text="@string/btn_them_anh" />

            <Button
                android:id="@+id/dummy_button_2"
                style="@style/btn_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:text="@string/btn_sua_anh" />

            <Button
                android:id="@+id/dummy_button_3"
                style="@style/btn_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:text="@string/btn_xoa_anh" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
