<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".BoMon1Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/bigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/txtKhoa"
                />

            <Spinner
                android:id="@+id/spinnerKhoa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
            </Spinner>

            <TextView
                style="@style/bigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/txtBoMon"
                />

            <Spinner
                android:id="@+id/spinnerBoMon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
            </Spinner>

        </LinearLayout>

        <Button
            android:id="@+id/btnXem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_xem"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</FrameLayout>
