<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fab_container_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:theme="@style/Theme.AppCompat"
    tools:context="com.nckh2016.vuduytung.nckh2016.ThongTinCaNhan2Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/bigText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/txtCapNhatThongTin"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/line_bottom"
            android:layout_below="@+id/txtTitle"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/editHoTen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edithoten" />

                <Spinner
                    android:id="@+id/spinnerChuyenSau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editHoTen"
                    android:visibility="gone" />

            </RelativeLayout>

            <View
                android:id="@+id/line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="#efefef" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txtNam"
                    android:textColor="@color/white" />

                <NumberPicker
                    android:id="@+id/numberPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/line_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/btnGroup"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="#efefef" />

        <LinearLayout
            android:id="@+id/btnGroup"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="@style/btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_huy"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#efefef" />

            <Button
                android:id="@+id/btnUpdate"
                style="@style/btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_capnhat"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
